# IdenaTelegramUpdater

./: .gitignore  README.md  idenaTelegramUpdaterd.service  pyproject.toml  sample-config.json  setup.py  tox.ini
releases/: idenaTelegramUpdater-0.1.0-py3-none-any.whl  idenaTelegramUpdater-0.1.1-py3-none-any.whl
src/idenaTelegramUpdater/: context.py  idena.py  main.py  telegramWrapper.py  worker.py
